fix: add new tailwind breakpoint; update build bundle chunk

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
 
+@theme {
+  --breakpoint-3xl: 120rem;
+}
+
 @layer utilities {
   .no-scrollbar::-webkit-scrollbar {
     display: none;
